changes in api upload and res

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/mapbox-gl": "^3.1.0",
+    "axios": "^1.6.8",
+    "geotiff.js": "^1.0.1",
     "mapbox-gl": "^2.15.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "togeojson": "^0.16.0",
+    "tokml": "^0.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
