--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
+    "@turf/turf": "^6.5.0",
     "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.8",
     "geotiff.js": "^1.0.1",
